--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@
     background-color: black;
     padding: 10px;
     margin-left:5px;
-    border-radius: 20px;
+    /*border-radius: 20px;*/
 }
 
 .conversation {
@@ -46,8 +46,7 @@
 }
 
 .ui-menu-item {
-    display: flex;
-    display: inline-block;
+    display: inline-flex;
     background-color: pink;
     padding: 10px;
     border-radius: 20px;
