--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,15 @@
     font-family: sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
+h1, .conversation, .controls {
+    margin-left: 10px;
+}
+
 .say {
     /*border: 1px solid blue;*/
     border-radius: 20px;
@@ -32,6 +41,27 @@
 .conversation {
     max-height: 70vh;
     overflow-y: scroll;
+}
+
+.inputSay {
+    width: 80%;
+    height: 35px;
+    border-radius: 25px;
+    border: none;
+    background-color: #eee;
+    margin: 0 0 20px 0;
+}
+
+.controls .submit {
+    width: 13%;
+    height: 35px;
+    border-radius: 30px;
+    background-color: blue;
+    border: 3px solid blue;
+    color: white;
+    font-weight: 100;
+    font-size: 20px;
+    /*font-family: "GT America", sans-serif;*/
 }
 
 
