--- a/public/custom-keyboard/keyboard.css
+++ b/public/custom-keyboard/keyboard.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    font-size: 11px;
+    font-size: 18px;
 }
 
 
@@ -49,7 +49,13 @@
 
 #custom-keyboard {
     background-color: #eeeeee;
-    display: none;
+    position: fixed;
+    bottom: -300px;
+    transition:0.5s ease;
+}
+
+#custom-keyboard.active {
+    bottom: 0;
 }
 
 .pipe {
@@ -75,10 +81,19 @@ ul li {
 
 li {
     flex: 1;
-    margin: 1px;
+    /*margin: 1px;*/
     padding: 10px;
-    border-radius: 5px;
-    background-color: white;
+    /*border-radius: 5px;*/
+    background-color: #f3f3f3;
+}
+
+.numbers {
+    font-size: 70%;
+}
+
+.space {
+    flex:3;
+    background-color: #bbbbbb;
 }
 
 .keyrow {
